# electrochemical-signal-analysis-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: methodology.md
examples/: basic_amperometry_analysis.py  basic_cv_analysis.py  basic_dpv_analysis.py  batch_amperometry_analysis.py  batch_cv_analysis.py  batch_dpv_analysis.py  batch_dpv_to_calibration.py  batch_to_calibration.py  calibration_analysis.py  create_demo_notebook.py  full_biosensor_workflow.py  replicate_calibration_analysis.py
learning-notes/: cv-and-dpv-basics.md
notebooks/: demo_biosensor_workflow.ipynb
src/echem_signal_toolkit/: __init__.py  amperometry.py  batch.py  calibration.py  dpv.py  features.py  io.py  peaks.py  plotting.py  preprocessing.py  report.py  simulation.py
tests/: test_amperometry.py  test_batch.py  test_calibration.py  test_dpv.py  test_features.py  test_full_biosensor_workflow.py  test_io.py  test_peaks.py  test_preprocessing.py  test_replicate_calibration.py  test_report.py  test_simulation.py
