[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electrochemical-signal-analysis-toolkit"
version = "0.1.0"
description = "Python toolkit for preprocessing, visualization and feature extraction of electrochemical sensing data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "nbformat",
]

[tool.setuptools.packages.find]
where = ["src"]